--- a/YourCourses/Views/CoursesList/Index.cshtml
+++ b/YourCourses/Views/CoursesList/Index.cshtml
@@ -118,7 +118,7 @@
             </div>
             <hr>
         </li>
-
+        
             @*<li>
                     <div>
 
@@ -149,7 +149,33 @@
 
                 </li>*@
     }
+    <li>
 
+        <div class="row slideanim animated bounceInLeft">
+            <div class="col-sm-7 col-xs-4">
+                <div class="panel panel-default text-center">
+                    <div class="panel-heading">
+
+                        <h1 class="glyphicon glyphicon-play logo-small"> Режим челленджа</h1>
+                    </div>
+                    <div class="panel-body">
+
+                        <p><strong>Информация о курсе: </strong> Режим состоит исключительно из практических заданий</p>
+                        <p><strong>Дата создания курса</strong> 1.1.2017</p>
+                    </div>
+
+                    <div class="panel-footer">
+
+                        <h3><strong>Создатель курса:</strong>admin@mail.ru</h3>
+                        <h4><strong>Тип курса:</strong> -</h4>
+                        <button onclick="location.href='@Url.Action("Index", "Challenge")'" class="btn btn-lg ">Learn more &raquo;</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </li>
 </ul>
+
 
 
