--- a/YourCourses/Views/Home/Contact.cshtml
+++ b/YourCourses/Views/Home/Contact.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }<br><br><br>
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Помощь</h2>
+<h3>Чат предназначен для вопросов</h3>
 
 
 <!-- Bootstrap and JQuery -->
