--- a/YourCourses/Views/PracticesHome/Edit.cshtml
+++ b/YourCourses/Views/PracticesHome/Edit.cshtml
@@ -101,6 +101,14 @@ tinymce.init({
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Mark, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Mark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Mark, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.SublectureSubId, "SublectureSubId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("SublectureSubId", null, htmlAttributes: new { @class = "form-control" })
