--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -15,7 +15,7 @@
 new AjaxOptions { UpdateTargetId = "results1"/*, LoadingElementId = "loading3"*/ },
 new
 {
-    @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 14px;text-align:left; max-width: 300px;font-size:large;",
+    @style = " padding-top:12px; padding-bottom: 14px;text-align:left; max-width: 1000px;font-size:large;",
     @class = "glyphicon glyphicon-book btn btn-default animated bounceInRight "
 })
 
@@ -30,9 +30,9 @@ new
 <div class="btn-group-vertical">
 @if (User.IsInRole("admin"))
 {
-    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new {  @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",@class = "btn btn-default" })
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new {  @style = "padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",@class = "btn btn-default" })
 
-   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
+   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @style = " padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
 }
     
 </div>
