--- a/YourCourses/Views/CoursesList/Lecture.cshtml
+++ b/YourCourses/Views/CoursesList/Lecture.cshtml
@@ -60,7 +60,7 @@
                     <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
                     @Ajax.ActionLink(s.LectureName, "SublecturesList", new { id = s.LectureId },
            new AjaxOptions { UpdateTargetId = "results"/*, LoadingElementId = "loading"*/ },
-           new { @style = "text-transform:capitalize; color:black; padding-top:22px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;" }
+           new { @style = " color:black; padding-top:22px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;" }
 
            )
                     </button>
