--- a/YourCourses/Views/Execute/Index.cshtml
+++ b/YourCourses/Views/Execute/Index.cshtml
@@ -15,7 +15,7 @@
 
     <!-- CSS Includes -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
     <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
@@ -63,7 +63,10 @@
                 </div>
                 <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
                 <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
+
+                
             }
+            
 
             <br /><br />
             <div class="modal fade" id="myModal" role="dialog">
@@ -84,16 +87,23 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            
+                            <button type="button" onclick="location.href='@Url.Action("Close", "Execute", new { id= (int)Session["CurrentPractId"] })'" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
-
+                    @Ajax.ActionLink("Обновить оценку", "UpdateMark", new { id = (int)Session["CurrentPractId"] },
+                   new AjaxOptions { UpdateTargetId = "results5" })
+                    
                     @*<div class="alert alert-warning fade">
                         <strong><span class="alert-content"></span></strong>
                     </div>*@
                 </div>
             </div>
-
+            @Ajax.ActionLink("Обновить оценку ", "UpdateMark",
+           new { id = (int)Session["CurrentPractId"] }, 
+           new AjaxOptions { UpdateTargetId = "results5"},
+    new { @class = "btn btn-default btn-lg " })
+            <div id="results5"></div>
             <!-- JS includes -->
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
