--- a/YourCourses/Views/PracticesHome/Create.cshtml
+++ b/YourCourses/Views/PracticesHome/Create.cshtml
@@ -100,6 +100,14 @@ tinymce.init({
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.PracticeUserInput, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.PracticeUserInput, 10, 110, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PracticeUserInput, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.SecondPart, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.SecondPart, 10, 110,new { htmlAttributes = new {  @class = "form-control" } })
