--- a/YourCourses/Views/Execute/Index.cshtml
+++ b/YourCourses/Views/Execute/Index.cshtml
@@ -35,10 +35,7 @@
             height: auto;
             overflow-y: hidden;
             overflow-x: auto;
-        
         }
-    
-
     </style>
 
 </head>
@@ -52,7 +49,7 @@
             @using (Html.BeginForm())
             {
 
-                
+
                 <div class="form-group animated zoomInUp">
                     @Html.Raw(Session["TEXT"].ToString())
                     @Html.TextArea("FirstPart", (string)Session["FP"])
@@ -64,9 +61,9 @@
                 <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
                 <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
 
-                
+
             }
-            
+
 
             <br /><br />
             <div class="modal fade" id="myModal" role="dialog">
@@ -87,23 +84,27 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            
-                            <button type="button" onclick="location.href='@Url.Action("Close", "Execute", new { id= (int)Session["CurrentPractId"] })'" class="btn btn-default" data-dismiss="modal">Close</button>
+                            @Ajax.ActionLink("Учесть результаты ", "Close",
+                               new { id = (int)Session["CurrentPractId"] },
+                             new AjaxOptions { UpdateTargetId = "results5" },
+                            new { @class = "btn btn-success btn-lg " })
+                            <button type="button"  class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
-                    @Ajax.ActionLink("Обновить оценку", "UpdateMark", new { id = (int)Session["CurrentPractId"] },
-                   new AjaxOptions { UpdateTargetId = "results5" })
-                    
+                    @*@Ajax.ActionLink("Обновить оценку", "UpdateMark", new { id = (int)Session["CurrentPractId"] },
+                   new AjaxOptions { UpdateTargetId = "results5" })*@
+
                     @*<div class="alert alert-warning fade">
-                        <strong><span class="alert-content"></span></strong>
-                    </div>*@
+                            <strong><span class="alert-content"></span></strong>
+                        </div>*@
                 </div>
             </div>
-            @Ajax.ActionLink("Обновить оценку ", "UpdateMark",
-           new { id = (int)Session["CurrentPractId"] }, 
-           new AjaxOptions { UpdateTargetId = "results5"},
-    new { @class = "btn btn-default btn-lg " })
-            <div id="results5"></div>
+            
+            @*@Ajax.ActionLink("Обновить оценку ", "UpdateMark",
+                       new { id = (int)Session["CurrentPractId"] },
+                       new AjaxOptions { UpdateTargetId = "results5"},
+                new { @class = "btn btn-default btn-lg " })*@
+            <div id="results5">@Session["mark"]</div>
             <!-- JS includes -->
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
