--- a/YourCourses/Views/AdminPage/InfoAbout.cshtml
+++ b/YourCourses/Views/AdminPage/InfoAbout.cshtml
@@ -23,6 +23,8 @@
 <hr>
 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 
+<br><button type="button" onclick="location.href='@Url.Action("Index", "PracticeAndUserMarks")'" class="btn btn-default ">Просмотреть оценки пользователей</button>
+<br>
 <strong class="animated fadeInDown" >Управление курсами:</strong><br>
 <div class="btn-group-vertical">
     <button type="button" onclick="location.href='@Url.Action("Create", "Courses")'" class="btn btn-default ">Создать новый курс</button>
