--- a/YourCourses/Views/Execute/Close.cshtml
+++ b/YourCourses/Views/Execute/Close.cshtml
@@ -1,3 +1,2 @@
-﻿<br>
-Текущая оценка составляет <br>
-@Session["mark"] <b>баллов</b>
+﻿
+Текущая оценка составляет <br><b><h3>@Session["mark"] баллов</h3></b>
