--- a/YourCourses/Views/SubLectures/Index.cshtml
+++ b/YourCourses/Views/SubLectures/Index.cshtml
@@ -32,8 +32,8 @@
                 @Html.DisplayFor(modelItem => item.SubName)
             </td>
             <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.SubId }, new { @class = "btn btn-primary" }) 
-                @Html.ActionLink("Details", "Details", new { id = item.SubId }, new { @class = "btn btn-info" })*@ 
+                @Html.ActionLink("Edit", "Edit", new { id = item.SubId }, new { @class = "btn btn-primary" }) 
+                @*@Html.ActionLink("Details", "Details", new { id = item.SubId }, new { @class = "btn btn-info" })*@
                 @Html.ActionLink("Delete", "Delete", new { id = item.SubId }, new { @class = "btn btn-danger" })
             </td>
         </tr>
