--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -27,15 +27,16 @@ new
     </div>
     <br>
 <br>
-<div class="btn-group-vertical">
 @if (User.IsInRole("admin"))
 {
-    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new {  @style = "padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",@class = "btn btn-default" })
+<div class="btn-group-vertical">
+
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @style = "padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
 
    @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @style = " padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
-}
+
     
-</div>
+</div>}
     <br>
 
     
