Add success page

--- a/YourCourses/Views/CoursesList/Index.cshtml
+++ b/YourCourses/Views/CoursesList/Index.cshtml
@@ -154,7 +154,7 @@
         <div class="row slideanim animated bounceInLeft">
             <div class="col-sm-7 col-xs-4">
                 <div class="panel panel-default text-center">
-                    <div class="panel-heading">
+                    <div class="panel-heading", style="background-color:brown !important">
 
                         <h1 class="glyphicon glyphicon-play logo-small"> Режим челленджа</h1>
                     </div>
