--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -31,9 +31,13 @@ new
 {
 <div class="btn-group-vertical">
 
-    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @style = "padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null,
+    new { @style = "padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",
+        @class = "btn btn-default" })
 
-   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @style = " padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
+   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null,
+    new { @style = " padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",
+        @class = "btn btn-default" })
 
     
 </div>}
