--- a/YourCourses/Views/PracticesHome/Create.cshtml
+++ b/YourCourses/Views/PracticesHome/Create.cshtml
@@ -138,7 +138,9 @@ tinymce.init({
         </div>
     </div>
 }
-
+<p>
+    @Html.ActionLink("Добавить ответы", "Create", "CorrectAnswers", null, new { @class = "btn btn-success animated bounceInLeft" })
+</p>
 <div>
     @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
 </div>
