--- a/YourCourses/Views/PracticesHome/Index.cshtml
+++ b/YourCourses/Views/PracticesHome/Index.cshtml
@@ -63,3 +63,6 @@
 }
 
 </table>
+<p>
+    @Html.ActionLink("Добавить ответы", "Create", "CorrectAnswers", null, new { @class = "btn btn-success animated bounceInLeft" })
+</p>
