--- a/YourCourses/Views/CoursesList/ShowPractice.cshtml
+++ b/YourCourses/Views/CoursesList/ShowPractice.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-  Layout = null;
+    Layout = null;
 }
-@model IEnumerable<YourCourses.Models.Practice>
+@model YourCourses.Models.Practice
 <!-- JS includes -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -18,44 +18,44 @@
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
 <link href="~/Scripts/codemirror-2.37/lib/codemirror.css" rel="stylesheet" type="text/css" />
 <link href="~/Scripts/codemirror-2.37/theme/lesser-dark.css" rel="stylesheet" type="text/css" />
-@{ var info=@"//Rextester.Program.Main is the entry point for your code. Don't change it.
+@{ var info = @"//Rextester.Program.Main is the entry point for your code. Don't change it.
 //Compiler version 4.0.30319.17929 for Microsoft (R) .NET Framework 4.5";
 }
-@foreach (var item in Model)
-{
-    <p class="text-success">@Html.Raw(item.PracticeDescription.ToString())</p>
-    ViewBag.practiceuserinput= item.PracticeUserInput.ToString();
-    if (item.PracticeUserInput != null) { Session["UI"] = item.PracticeUserInput.ToString(); }
-    if (item.FirstPart != null) { Session["FP"] = item.FirstPart.ToString(); }
-    if (item.TestsPart != null) { Session["TEST"] = item.TestsPart.ToString(); }
-    if (item.SecondPart != null) { Session["LP"] = item.SecondPart.ToString(); }
-    if (item.PracticeDescription != null) { Session["TEXT"] = item.PracticeDescription.ToString(); }
-     Session["CurrentPractId"] = item.PracticeId; 
 
+    <p class="text-success">@Html.Raw(Model.PracticeDescription.ToString())</p>
+    @{ViewBag.practiceuserinput = Model.PracticeUserInput.ToString();
+        if (Model.PracticeUserInput != null) { Session["UI"] = Model.PracticeUserInput.ToString(); }
+        if (Model.FirstPart != null) { Session["FP"] = Model.FirstPart.ToString(); }
+        if (Model.TestsPart != null) { Session["TEST"] = Model.TestsPart.ToString(); }
+        if (Model.SecondPart != null) { Session["LP"] = Model.SecondPart.ToString(); }
+        if (Model.PracticeDescription != null) { Session["TEXT"] = Model.PracticeDescription.ToString(); }
+        Session["CurrentPractId"] = Model.PracticeId;
+        
+    }
 
     @*@Html.TextArea("First", item.FirstPart,  new { @class = "form-control", @readonly =true, rows = "15", cols = "200" })*@
     <br>
-    //@ViewBag.text= item.PracticeUserInput;
+    @*//@ViewBag.text= item.PracticeUserInput;*@
     @*@Ajax.ActionLink(@item.PracticeName, "Show", new {  },
     new AjaxOptions { UpdateTargetId = "results1", LoadingElementId = "loading3" },
     new { @style = "text-transform:capitalize;", @class = "btn btn-outline-info" })
     <div id="results1"></div>*@
 
 
-    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='@Url.Action("Index", "Execute", new { id = item.PracticeId})'">Перейти на страницу выполнения практической части</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='@Url.Action("Index", "Execute", new { id = Model.PracticeId})'">Перейти на страницу выполнения практической части</button>
 
-//using (Ajax.BeginForm("ShowEditorArea", new AjaxOptions
+@*//using (Ajax.BeginForm("ShowEditorArea", new AjaxOptions
 //{
 //    UpdateTargetId = "results3",
 //    LoadingElementId = "loading2"
 //}))
-{
+{*@
         <br>
         
-        //@Html.TextArea("Code", info + "\n" + (string)item.PracticeUserInput, new { rows = "10", cols = "1000" })
+        @*//@Html.TextArea("Code", info + "\n" + (string)Model.PracticeUserInput, new { rows = "10", cols = "1000" })*@
         <br>
     @*<button type="button" class="btn btn-success submit">Execute</button>*@
-    }
+    
     <div class="alert alert-warning fade">
         <strong><span class="alert-content"></span></strong>
         </div>
@@ -96,8 +96,8 @@
 
         <div id="results3"></div>
         @*<img id="loading2" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
-    break;
-}
+    @*break;*@
+
 
         <script>
 
