--- a/YourCourses/Views/ExecuteChallenge/Index.cshtml
+++ b/YourCourses/Views/ExecuteChallenge/Index.cshtml
@@ -16,7 +16,7 @@
 
     <!-- CSS Includes -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
     <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
@@ -61,17 +61,20 @@
                 </div>
                 <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
                 <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
+                
             }
 
 
             <br /><br />
-            <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal fade" data-backdrop="static" data-keyboard="false" id="myModal" role="dialog">
                 <div class="modal-dialog">
 
                     <!-- Modal content-->
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <button type="button" class="close"
+                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'" 
+                                    data-dismiss="modal">&times;</button>
                             <h4 class="modal-title">Результат выполнения программы </h4>
                         </div>
                         <div class="modal-body">
@@ -83,7 +86,9 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button id ="exec" type="button" 
+                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'" 
+                                    class="btn btn-default" data-dismiss="modal">Перейти к следующему заданию</button>
 
                         </div>
                     </div>
@@ -96,6 +101,11 @@
 
             <!-- JS includes -->
             <script>
+                $('#myModal').modal({
+                    backdrop: "static",
+                    keyboard: false
+                })
+
                 addEventListener(".btn btn-default", function () {
                     @if ((bool)Session["correct"] == true)
                     {
@@ -157,6 +167,7 @@
 
                 });
 
+
                 var readOnlyCodeMirror2 = CodeMirror.fromTextArea(document.getElementById('LastPart'), {
                     mode: "text/x-csharp",
                     theme: "default",
@@ -172,11 +183,17 @@
                     autohint: true,
                     extraKeys: { "Ctrl-Space": "autocomplete" },
                     theme: "lesser-dark"
-
+                    
                 });
-
+                function GetVal() {
+                    Session["UI"] = editor.getValue();
+                }
                 var text = editor.getValue();
-
+               
+                jQuery("#exec").on("click", function (event) {
+                   
+                    GetVal();
+                });
 
 
             </script>
