--- a/YourCourses/Views/PracticesHome/Edit.cshtml
+++ b/YourCourses/Views/PracticesHome/Edit.cshtml
@@ -125,7 +125,9 @@ tinymce.init({
         </div>
     </div>
 }
-
+<p>
+    @Html.ActionLink("Добавить ответы", "Create", "CorrectAnswers", null, new { @class = "btn btn-success animated bounceInLeft" })
+</p>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
