add additional practice info

--- a/YourCourses/Views/AdminPage/InfoAbout.cshtml
+++ b/YourCourses/Views/AdminPage/InfoAbout.cshtml
@@ -65,7 +65,12 @@
 </div>
 <br>
 <hr>
+<strong class="animated fadeInDown">Управление ответами:</strong><br>
+<div class="btn-group-vertical">
+    <button type="button" onclick="location.href='@Url.Action("Create", "CorrectAnswers")'" class="btn btn-default ">Создать новый ответ</button>
+    <button type="button" onclick="location.href='@Url.Action("Index", "CorrectAnswers")'" class="btn btn-info">Просмотреть список существующих ответов</button>
 
+</div>
 
     <br>
     <br>
