--- a/YourCourses/Views/Execute/Index.cshtml
+++ b/YourCourses/Views/Execute/Index.cshtml
@@ -64,10 +64,10 @@
                 <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
 
                 if (User.IsInRole("admin")) { 
-                <button type="button" class="btn btn-success animated zoomInUp" data-toggle="modal" data-target="#myModal1">Показать ответы</button>
+                <button type="button" class="btn btn-warning animated zoomInUp" data-toggle="modal" data-target="#myModal1">Показать ответы</button>
                 }
             }
-           @Session["ans"]
+           
             <div class="modal fade" id="myModal1" role="dialog">
                 <div class="modal-dialog">
 
