--- a/YourCourses/Views/ExecuteChallenge/Index.cshtml
+++ b/YourCourses/Views/ExecuteChallenge/Index.cshtml
@@ -60,10 +60,44 @@
                     @Html.TextArea("LastPart", (string)Session["LP"])
                 </div>
                 <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
-                <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
-                
+                <table  class="table table-bordered animated zoomIn">
+                    <tr>
+                        <p>
+                        <th class="success">Текущий уровень: @Session["startmark"] </th> 
+                        <th class="success"> Количество ошибок: @Session["totalFails"]</th> 
+                        <th class="success"> Количество правильных ответов подряд: @Session["countSuccess"] </th>
+                        <th class="success">Общее число ошибок: @Session["totalFails"]</th></p>
+</tr>
+                </table>
+                        <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
+                if (User.IsInRole("admin"))
+                {
+                    <button type="button" class="btn btn-warning animated zoomInUp" data-toggle="modal" data-target="#myModal1">Показать ответы</button>
+                }
             }
+            <div class="modal fade" id="myModal1" role="dialog">
+                <div class="modal-dialog">
 
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Решение задачи </h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                @Session["ans1"]
+
+
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
             <br /><br />
             <div class="modal fade" data-backdrop="static" data-keyboard="false" id="myModal" role="dialog">
@@ -73,8 +107,10 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close"
-                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'" 
-                                    data-dismiss="modal">&times;</button>
+                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
+                                    data-dismiss="modal">
+                                &times;
+                            </button>
                             <h4 class="modal-title">Результат выполнения программы </h4>
                         </div>
                         <div class="modal-body">
@@ -86,9 +122,11 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <button id ="exec" type="button" 
-                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'" 
-                                    class="btn btn-default" data-dismiss="modal">Перейти к следующему заданию</button>
+                            <button id="exec" type="button"
+                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
+                                    class="btn btn-default" data-dismiss="modal">
+                                Перейти к следующему заданию
+                            </button>
 
                         </div>
                     </div>
@@ -138,6 +176,7 @@
 			console.log('yo');
 					if($('form').valid()) {
                         text = editor.getValue();
+                        //Session["UI"]=editor.getValue();
 						$.ajax({
                             url: '@Url.RouteUrl(new{ action="Execute", controller="ExecuteChallenge"})',
                             data: { code: text },
@@ -183,18 +222,23 @@
                     autohint: true,
                     extraKeys: { "Ctrl-Space": "autocomplete" },
                     theme: "lesser-dark"
-                    
+
                 });
                 function GetVal() {
                     Session["UI"] = editor.getValue();
                 }
                 var text = editor.getValue();
-               
-                jQuery("#exec").on("click", function (event) {
-                   
-                    GetVal();
-                });
 
+                $("#exec").click(function () {
+
+                    Session["UI"] = editor.getValue();
+
+                });
+                exec1.onclick = function () {
+                    Session["UI"] = editor.getValue();
+
+
+                };
 
             </script>
 
