--- a/YourCourses/Views/ExecuteChallenge/ShowResults.cshtml
+++ b/YourCourses/Views/ExecuteChallenge/ShowResults.cshtml
@@ -8,7 +8,7 @@
             <img src="http://osmhotels.com//assets/check-true.jpg">
             <h3>Ваша оценка :</h3>
             <p style="font-size:20px;color:#5C5C5C;">
-               @Session["startmark"]
+               @Session["startmark"]/@Session["maxMark"]
             </p>
             <a href="/CoursesList/Index" class="btn btn-success">     На страницу выбора курсов      </a>
             <br><br>
