--- a/YourCourses/Views/CoursesList/ShowPractice.cshtml
+++ b/YourCourses/Views/CoursesList/ShowPractice.cshtml
@@ -21,7 +21,7 @@
 @{ var info = @"//Rextester.Program.Main is the entry point for your code. Don't change it.
 //Compiler version 4.0.30319.17929 for Microsoft (R) .NET Framework 4.5";
 }
-
+<div>Текущая оценка составляет <br><b><h3>@Session["mark"] </h3></b></div>
     <p class="text-success">@Html.Raw(Model.PracticeDescription.ToString())</p>
     @{ViewBag.practiceuserinput = Model.PracticeUserInput.ToString();
         if (Model.PracticeUserInput != null) { Session["UI"] = Model.PracticeUserInput.ToString(); }
@@ -31,6 +31,7 @@
         if (Model.PracticeDescription != null) { Session["TEXT"] = Model.PracticeDescription.ToString(); }
         Session["CurrentPractId"] = Model.PracticeId;
         
+
     }
 
     @*@Html.TextArea("First", item.FirstPart,  new { @class = "form-control", @readonly =true, rows = "15", cols = "200" })*@
@@ -40,6 +41,7 @@
     new AjaxOptions { UpdateTargetId = "results1", LoadingElementId = "loading3" },
     new { @style = "text-transform:capitalize;", @class = "btn btn-outline-info" })
     <div id="results1"></div>*@
+
 
 
     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='@Url.Action("Index", "Execute", new { id = Model.PracticeId})'">Перейти на страницу выполнения практической части</button>
